# type-transform

./: .gitignore  Cargo.toml  README.md  RELEASING.md  run.sh
.github/workflows/: release.yaml
npm/: build.js  package.json.tmpl  publish-bin.sh
npm/downloads/x64-apple-darwin/: type-transform
npm/downloads/x64-unknown-linux-musl/: type-transform
npm/type-transform/: README.md  build-cjs.sh  build-dependencies.js  package-lock.json  package.json  publish.sh  tsconfig-cjs.json
npm/type-transform/src/: cli.js  get-exe-path.js  index.cjs  index.d.ts  index.js
npm/type-transform/src/cjs/: cli.js  get-exe-path.js  index.js
src/: main.rs
src/languages/: kotlin_transformer.rs  language_factory.rs  mod.rs  swift_transformer.rs  transformer.rs
src/languages/kotlin/: kotlin_enum_display_type_trait.rs  kotlin_is_interface_type_trait.rs  kotlin_style.rs  kotlin_transformer.rs  kotlin_type_trait.rs  mod.rs
src/languages/shared/: enum_trait.rs  is_async_trait.rs  mod.rs
src/languages/swift/: mod.rs  swift_enum_display_type_trait.rs  swift_fn_return_type_trait.rs  swift_is_async_trait.rs  swift_is_protocol_type_trait.rs  swift_struct_type_trait.rs  swift_style.rs  swift_test.rs  swift_transformer.rs  swift_type_trait.rs
src/utils/: content_utils.rs  file_utils.rs  mod.rs
ts-files/: hello-world.ts
