[package]
name = "type-transform"
version = "0.1.3"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
oxc_allocator = "0.48.1"
oxc_ast = { version = "0.48.0", features = ["serialize"] }
oxc_parser = "0.48.0"
oxc_span = "0.48.1"
